[package]
name = "noted"
version = "1.0.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
# UI
bevy = { version = "0.11.2" }
bevy_winit = "0.11.2"
dialog-box = "0.1.0"

# Utilities
lazy_static = "1.4.0"

[target.'cfg(target_os = "windows")'.dependencies]
# Stylus support on windows
windows = "0.51.1"

[target.'cfg(target_os = "linux")'.dependencies]
# Stylus support on linux
input = "0.8.3"
libc = "0.2.147"
users = "0.11.0"